@@ -1,0 +1,153 @@
+//============================================================================
+//
+//   SSSS    tt          lll  lll
+//  SS  SS   tt           ll   ll
+//  SS     tttttt  eeee   ll   ll   aaaa
+//   SSSS    tt   ee  ee  ll   ll      aa
+//      SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
+//  SS  SS   tt   ee      ll   ll  aa  aa
+//   SSSS     ttt  eeeee llll llll  aaaaa
+//
+// Copyright (c) 1995-2009 by Bradford W. Mott and the Stella team
+//
+// See the file "license" for information on usage and redistribution of
+// this file, and for a DISCLAIMER OF ALL WARRANTIES.
+//
+// $Id: CartEFSC.hxx,v 1.1 2009-04-05 20:18:41 stephena Exp $
+//============================================================================
+
+#ifndef CARTRIDGEEFSC_HXX
+#define CARTRIDGEEFSC_HXX
+
+class System;
+
+#include "bspf.hxx"
+#include "Cart.hxx"
+
+/**
+  Cartridge class used for Homestar Runner by Paul Slocum.
+  There are 16 4K banks (total of 64K ROM) with 128 bytes of RAM.
+  Accessing $1FE0 - $1FEF switches to each bank.
+
+  This interpretation is based on analysis of the z26 assembly code,
+  as this scheme doesn't seem to be documented anywhere.
+
+  @author  Stephen Anthony
+  @version $Id: CartEFSC.hxx,v 1.1 2009-04-05 20:18:41 stephena Exp $
+*/
+class CartridgeEFSC : public Cartridge
+{
+  public:
+    /**
+      Create a new cartridge using the specified image
+
+      @param image Pointer to the ROM image
+    */
+    CartridgeEFSC(const uInt8* image);
+
+    /**
+      Destructor
+    */
+    virtual ~CartridgeEFSC();
+
+  public:
+    /**
+      Reset device to its power-on state
+    */
+    virtual void reset();
+
+    /**
+      Install cartridge in the specified system.  Invoked by the system
+      when the cartridge is attached to it.
+
+      @param system The system the device should install itself in
+    */
+    virtual void install(System& system);
+
+    /**
+      Install pages for the specified bank in the system.
+
+      @param bank The bank that should be installed in the system
+    */
+    virtual void bank(uInt16 bank);
+
+    /**
+      Get the current bank.
+
+      @return  The current bank, or -1 if bankswitching not supported
+    */
+    virtual int bank();
+
+    /**
+      Query the number of banks supported by the cartridge.
+    */
+    virtual int bankCount();
+
+    /**
+      Patch the cartridge ROM.
+
+      @param address  The ROM address to patch
+      @param value    The value to place into the address
+      @return    Success or failure of the patch operation
+    */
+    virtual bool patch(uInt16 address, uInt8 value);
+
+    /**
+      Access the internal ROM image for this cartridge.
+
+      @param size  Set to the size of the internal ROM image data
+      @return  A pointer to the internal ROM image data
+    */
+    virtual uInt8* getImage(int& size);
+
+    /**
+      Save the current state of this cart to the given Serializer.
+
+      @param out  The Serializer object to use
+      @return  False on any errors, else true
+    */
+    virtual bool save(Serializer& out) const;
+
+    /**
+      Load the current state of this cart from the given Deserializer.
+
+      @param in  The Deserializer object to use
+      @return  False on any errors, else true
+    */
+    virtual bool load(Deserializer& in);
+
+    /**
+      Get a descriptor for the device name (used in error checking).
+
+      @return The name of the object
+    */
+    virtual string name() const { return "CartridgeEFSC"; }
+
+  public:
+    /**
+      Get the byte at the specified address.
+
+      @return The byte at the specified address
+    */
+    virtual uInt8 peek(uInt16 address);
+
+    /**
+      Change the byte at the specified address to the given value
+
+      @param address The address where the value should be stored
+      @param value The value to be stored at the address
+    */
+    virtual void poke(uInt16 address, uInt8 value);
+
+  private:
+    // Indicates which bank is currently active
+    uInt16 myCurrentBank;
+
+    // The 64K ROM image of the cartridge
+    uInt8 myImage[65536];
+
+    // The 128 bytes of RAM
+    uInt8 myRAM[128];
+};
+
+#endif
