@@ -13,7 +13,7 @@
 // See the file "license" for information on usage and redistribution of
 // this file, and for a DISCLAIMER OF ALL WARRANTIES.
 //
-// $Id: GlobalPropsDialog.cxx,v 1.5 2009-04-05 18:59:56 stephena Exp $
+// $Id: GlobalPropsDialog.cxx,v 1.6 2009-04-05 20:18:41 stephena Exp $
 //
 //   Based on code from ScummVM - Scumm Interpreter
 //   Copyright (C) 2002-2004 The ScummVM project
@@ -43,7 +43,7 @@ GlobalPropsDialog::
             buttonHeight = font.getLineHeight() + 4;
   int xpos, ypos;
   int lwidth = font.getStringWidth("Right Difficulty: "),
-      pwidth = font.getStringWidth("MC (C. Wilkson Megacart)");
+      pwidth = font.getStringWidth("EFSC (64K H. Runner + ram)");
   WidgetArray wid;
   StringMap items;
 
@@ -76,7 +76,8 @@ GlobalPropsDialog::
   items.push_back("DPC (Pitfall II)",           "DPC"  );
   items.push_back("E0 (8K Parker Bros)",        "E0"   );
   items.push_back("E7 (16K M-network)",         "E7"   );
-  items.push_back("EF (64K Homestar Runner)",   "EF"   );
+  items.push_back("EF (64K H. Runner)",         "EF"   );
+  items.push_back("EFSC (64K H. Runner + ram)", "EFSC" );
   items.push_back("F4 (32K Atari)",             "F4"   );
   items.push_back("F4SC (32K Atari + ram)",     "F4SC" );
   items.push_back("F6 (16K Atari)",             "F6"   );
